--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,8 @@
         </div>
     </div>
 
+    <footer><p>Hello it's me !</p></footer>
+
     <script src="chat.js"></script>
 </body>
 </html>
