--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <footer><p>Hello it's me !</p></footer>
+    <footer><p></p></footer>
 
     <script src="chat.js"></script>
 </body>
